k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: shopnow
  labels:
    app: api-gateway
    part-of: shopnow
    version: "1.0"
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
