k8s/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-ingress
  namespace: shopnow
  labels:
    app: frontend
    part-of: shopnow
    version: "1.0"
spec:
  ingressClassName: nginx
  rules:
    - host: shopnow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
